Fixes to feathers-react templates to allow initial run

--- a/plugin-dev/feathers-react/plugins/Entity/crudList.jsx.hbs
+++ b/plugin-dev/feathers-react/plugins/Entity/crudList.jsx.hbs
@@ -9,12 +9,15 @@ class {{class.name}}CrudList extends FeathersComponent {
     super();
   }
 
+  // TODO supply {{class.name}}CrudList meaningful results for getPrimaryText and getSecondaryText
   render() {
       return (
           <CrudPage
-            pageTitle={'{{class.name}}} list'}
-            dao={this.api.{{class.jsClassNameWithPath}}}Dao}
+            pageTitle={'{{class.name}} list'}
+            dao={this.api.{{class.jsClassNameWithPath}}Dao}
             appComponent={this.appComponent}
+            getPrimaryText={(item) => return `${item.{{class.attributes.0.name}}\}` },
+            getSecondaryText={(item) => return `${item.{{class.attributes.1.name}}\}` }
           />
       );
   }
