--- a/plugin-dev/feathers-react/plugins/Service/ServiceImpl.js.hbs
+++ b/plugin-dev/feathers-react/plugins/Service/ServiceImpl.js.hbs
@@ -28,6 +28,7 @@ class {{class.name}}Impl {
          {{~param.name}}, 
     {{~/each~}}
          }, feathersParams) {
+        // TODO supply implementation for {{class.name}}.{{fn.name}}()
 		// Return either a JSON object, or a Promise.
 		throw new errors.NotImplemented('{{class.name}}.{{fn.name}}() not yet implemented.');
 	}
