--- a/plugin-dev/feathers-react/plugins/Entity/index.test.js.hbs
+++ b/plugin-dev/feathers-react/plugins/Entity/index.test.js.hbs
@@ -120,8 +120,8 @@ describe('{{class.name}} service', function() {
           	  // Check that the returned results are as expected.
               res.body.data.should.be.a('array');
               res.body.data.should.have.length(1);
-              res.body.data[0].should.have.property('{{class.attributes[0].jsIdentifierName}}');
-              res.body.data[0].{{class.attributes[0].jsIdentifierName}}.should.equal(mock{{class.name}}1.{{class.attributes[0].jsIdentifierName}});
+              res.body.data[0].should.have.property('{{class.attributes.0.jsIdentifierName}}');
+              res.body.data[0].{{class.attributes.0.jsIdentifierName}}.should.equal(mock{{class.name}}1.{{class.attributes.0.jsIdentifierName}});
               done();
             });
   });
@@ -137,8 +137,8 @@ describe('{{class.name}} service', function() {
           .end((err, res) => {
           	  // Check that the returned results are as expected.
               res.body.data.should.be.a('array');
-              res.body.data[0].should.have.property('{{class.attributes[0].jsIdentifierName}}');
-              res.body.data[0].{{class.attributes[0].jsIdentifierName}}.should.equal(mock{{class.name}}2.{{class.attributes[0].jsIdentifierName}});
+              res.body.data[0].should.have.property('{{class.attributes.0.jsIdentifierName}}');
+              res.body.data[0].{{class.attributes.0.jsIdentifierName}}.should.equal(mock{{class.name}}2.{{class.attributes.0.jsIdentifierName}});
               res.body.data.should.have.length(1);
               done();
             });
@@ -184,18 +184,18 @@ describe('{{class.name}} service', function() {
 
         	.then(function(res) {
         		expect(res).to.have.status(201);
-        		res.body.should.have.property('{{class.attributes[0].jsIdentifierName}}');
-        		res.body.{{class.attributes[0].jsIdentifierName}}.should.equal(mock{{class.name}}2.{{class.attributes[0].jsIdentifierName}});
+        		res.body.should.have.property('{{class.attributes.0.jsIdentifierName}}');
+        		res.body.{{class.attributes.0.jsIdentifierName}}.should.equal(mock{{class.name}}2.{{class.attributes.0.jsIdentifierName}});
         		res.body.should.have.property('ownerUserId');
         		res.body.ownerUserId.should.equal(user1._id.toString());
 
         		// Make sure that "extra" field is not part of the final entity...
         		res.body.should.not.have.property('badField');
 
-        		// Now, try to find {{class.attributes[0].jsIdentifierName}}Value2.  We should only get OUR {{class.attributes[0].jsIdentifierName}}Value2...
+        		// Now, try to find {{class.attributes.0.jsIdentifierName}}Value2.  We should only get OUR {{class.attributes.0.jsIdentifierName}}Value2...
         		return chai.request(app)
         				.get('/{{class.packageDirName}}{{class.name}}')
-        				.query( { {{class.attributes[0].jsIdentifierName}}: mock{{class.name}}2.{{class.attributes[0].jsIdentifierName}}} )
+        				.query( { {{class.attributes.0.jsIdentifierName}}: mock{{class.name}}2.{{class.attributes.0.jsIdentifierName}} } )
 				        .set('Accept', 'application/json')
 				        .set('Authorization', 'Bearer '.concat(user1AuthToken));
         	})
@@ -205,12 +205,12 @@ describe('{{class.name}} service', function() {
         		// only "owns", one of them, so this should have have a single entry returned.
 	            res.body.data.should.be.a('array');
 	            res.body.data.should.have.length(1);
-	            res.body.data[0].should.have.property('{{class.attributes[0].jsIdentifierName}}');
-	            res.body.data[0].{{class.attributes[0].jsIdentifierName}}.should.equal(mock{{class.name}}2.{{class.attributes[0].jsIdentifierName}});
+	            res.body.data[0].should.have.property('{{class.attributes.0.jsIdentifierName}}');
+	            res.body.data[0].{{class.attributes.0.jsIdentifierName}}.should.equal(mock{{class.name}}2.{{class.attributes.0.jsIdentifierName}});
 
 	            // Try to update the field...
 	            lastEntity = res.body.data[0];
-	            lastEntity.{{class.attributes[0].jsIdentifierName}} = mock{{class.name}}2.{{class.attributes[0].jsIdentifierName}} + '-update';
+	            lastEntity.{{class.attributes.0.jsIdentifierName}} = mock{{class.name}}2.{{class.attributes.0.jsIdentifierName}} + '-update';
 
 	            // Also try sending a bad field, and removing our ownerUserId...
 	            lastEntity.badField = 'wrong';
@@ -225,15 +225,15 @@ describe('{{class.name}} service', function() {
 {{/if}}
         	.then(function(res) {
         		expect(res).to.have.status(200);
-        		res.body.should.have.property('{{class.attributes[0].jsIdentifierName}}');
-        		res.body.{{class.attributes[0].jsIdentifierName}}.should.equal(mock{{class.name}}2.{{class.attributes[0].jsIdentifierName}} + '-update');
+        		res.body.should.have.property('{{class.attributes.0.jsIdentifierName}}');
+        		res.body.{{class.attributes.0.jsIdentifierName}}.should.equal(mock{{class.name}}2.{{class.attributes.0.jsIdentifierName}} + '-update');
 
 {{#if class.isUserOWned}}
         		// Do we still have the owner id?
         		res.body.should.have.property('ownerUserId');
         		res.body.ownerUserId.should.equal(user1._id.toString());
 
-{/if}
+{{/if}}
         		// Make sure that "extra" field is not part of the final entity...
         		res.body.should.not.have.property('badField');
 
@@ -285,8 +285,8 @@ describe('{{class.name}} service', function() {
         	.then(function(res) {
 	         	// Check that the returned results are as expected.
 	            res.body.data.should.be.a('array');
-	            res.body.data[0].should.have.property('{{class.attributes[0].jsIdentifierName}}');
-	            res.body.data[0].{{class.attributes[0].jsIdentifierName}}.should.equal(mock{{class.name}}2.{{class.attributes[0].jsIdentifierName}});
+	            res.body.data[0].should.have.property('{{class.attributes.0.jsIdentifierName}}');
+	            res.body.data[0].{{class.attributes.0.jsIdentifierName}}.should.equal(mock{{class.name}}2.{{class.attributes.0.jsIdentifierName}});
         		  res.body.data[0].should.have.property('ownerUserId');
         		  res.body.data[0].ownerUserId.should.equal(user2._id.toString());
 	            res.body.data.should.have.length(1);
@@ -295,7 +295,7 @@ describe('{{class.name}} service', function() {
 
 	            // Now, attempt to "steal" it via an update using user 1's credentials...
 	            entity.ownerUserId = user1._id;
-	            entity.{{class.attributes[0].jsIdentifierName}} = mock{{class.name}}2.{{class.attributes[0].jsIdentifierName}} + '-update';
+	            entity.{{class.attributes.0.jsIdentifierName}} = mock{{class.name}}2.{{class.attributes.0.jsIdentifierName}} + '-update';
 
         		return chai.request(app)
         				.put('/{{class.packageDirName}}{{class.name}}/' + entity._id)
@@ -331,8 +331,8 @@ describe('{{class.name}} service', function() {
         	.then(function(res) {
 	         	// Check that the returned results are as expected.
 	            res.body.data.should.be.a('array');
-	            res.body.data[0].should.have.property('{{class.attributes[0].jsIdentifierName}}');
-	            res.body.data[0].{{class.attributes[0].jsIdentifierName}}.should.equal(mock{{class.name}}2.{{class.attributes[0].jsIdentifierName}});
+	            res.body.data[0].should.have.property('{{class.attributes.0.jsIdentifierName}}');
+	            res.body.data[0].{{class.attributes.0.jsIdentifierName}}.should.equal(mock{{class.name}}2.{{class.attributes.0.jsIdentifierName}});
         		  res.body.data[0].should.have.property('ownerUserId');
         		  res.body.data[0].ownerUserId.should.equal(user2._id.toString());
 	            res.body.data.should.have.length(1);
@@ -340,7 +340,7 @@ describe('{{class.name}} service', function() {
 	            let entity = res.body.data[0];
 
 	            // Now, attempt to "steal" it via an update using user 1's credentials...
-	            entity.{{class.attributes[0].jsIdentifierName}} = mock{{class.name}}2.{{class.attributes[0].jsIdentifierName}} + '-update';
+	            entity.{{class.attributes.0.jsIdentifierName}} = mock{{class.name}}2.{{class.attributes.0.jsIdentifierName}} + '-update';
 
         		return chai.request(app)
         				.put('/{{class.packageDirName}}{{class.name}}/' + entity._id)
@@ -383,8 +383,8 @@ describe('{{class.name}} service', function() {
 
         	.then(function(res) {
         		expect(res).to.have.status(201);
-        		res.body.should.have.property('{{class.attributes[0].jsIdentifierName}}');
-        		res.body.{{class.attributes[0].jsIdentifierName}}.should.equal(mock{{class.name}}2.{{class.attributes[0].jsIdentifierName}});
+        		res.body.should.have.property('{{class.attributes.0.jsIdentifierName}}');
+        		res.body.{{class.attributes.0.jsIdentifierName}}.should.equal(mock{{class.name}}2.{{class.attributes.0.jsIdentifierName}});
 {{#if class.isUserOwned}}            
         		res.body.should.have.property('ownerUserId');
         		res.body.ownerUserId.should.equal(user1._id.toString());
@@ -394,7 +394,7 @@ describe('{{class.name}} service', function() {
         		res.body.should.not.have.property('badField');
 
         		assert(typeof(created{{class.name}}) !== 'undefined');
-        		assert.equal(res.body.{{class.attributes[0].jsIdentifierName}}, created{{class.name}}.{{class.attributes[0].jsIdentifierName}});
+        		assert.equal(res.body.{{class.attributes.0.jsIdentifierName}}, created{{class.name}}.{{class.attributes.0.jsIdentifierName}});
         		assert.equal(res.body.ownerUserId, created{{class.name}}.ownerUserId);
         		assert.equal(res.body._id, created{{class.name}}._id);
         	});
