--- a/plugin-dev/feathers-react/plugins/POJO/pojo-operations.js.hbs
+++ b/plugin-dev/feathers-react/plugins/POJO/pojo-operations.js.hbs
@@ -1,10 +1,4 @@
-{{#if class.hasOperations}}
-##output preserve {{@root.output}}/{{class.packageDirName}}/{{class.name}}-operations.js
-{{else}}
-##output ignore {{@root.output}}/{{class.packageDirName}}/{{class.name}}-operations.js
-{{/if}}
-{{#* inline "methodDeclaration"}}
-{{/inline}}
+##output {{#if class.hasOperations}}preserve{{else}}ignore{{/if}} {{@root.output}}/{{#if class.isValueObject}}common/{{else}}src/{{/if}}{{class.packageDirName}}/{{class.name}}-operations.js
 {{#with class as |class|}}
 
 // This file was generated with NodeMDA, but you may place your customizations here
