Bug fixes to feathers-react plugin

--- a/plugin-dev/feathers-react/plugins/Entity/apiFacadeEntry.hbs
+++ b/plugin-dev/feathers-react/plugins/Entity/apiFacadeEntry.hbs
@@ -1,5 +1,5 @@
 ##output property apiDaoEntries
-
-	api.{{jsClassNameWithPath}}Dao = app.service('/{{class.packageDirName}}{{class.name}}Dao');
-	api.{{jsClassNameWithPath}}Dao.schema = {{class.name}}Schema;
+    {{initJSNamespace 'api' class.jsPackageName}}
+	api.{{class.jsClassNameWithPath}}Dao = app.service('{{class.expressServicePath}}');
+	api.{{class.jsClassNameWithPath}}Dao.schema = {{class.name}}Schema;
 	
