--- a/plugin-dev/feathers-react/plugins/Entity/custom-hooks.js.hbs
+++ b/plugin-dev/feathers-react/plugins/Entity/custom-hooks.js.hbs
@@ -1,4 +1,4 @@
-##output preserve {{@root.output}}/src/services/{{class.packageDirName}}/{{class.name}}/hooks/custom-hooks.js
+##output preserve {{@root.output}}/src/services/{{class.packageDirName}}/{{class.name}}Dao/hooks/custom-hooks.js
 'use strict';
 
 // Custom hook functions for the {{class.name}} object...
