--- a/plugin-dev/feathers-react/plugins/Entity/crudList.jsx.hbs
+++ b/plugin-dev/feathers-react/plugins/Entity/crudList.jsx.hbs
@@ -16,8 +16,8 @@ class {{class.name}}CrudList extends FeathersComponent {
             pageTitle={'{{class.name}} list'}
             dao={this.api.{{class.jsClassNameWithPath}}Dao}
             appComponent={this.appComponent}
-            getPrimaryText={(item) => return `${item.{{class.attributes.0.name}}\}` },
-            getSecondaryText={(item) => return `${item.{{class.attributes.1.name}}\}` }
+            getPrimaryText={(item) => return `${item.{{class.attributes.0.name}} }` },
+            getSecondaryText={(item) => return `${item.{{class.attributes.1.name}} }` }
           />
       );
   }
