--- a/plugin-dev/feathers-react/plugins/Service/apiFacadeEntry.hbs
+++ b/plugin-dev/feathers-react/plugins/Service/apiFacadeEntry.hbs
@@ -1,21 +1,22 @@
 ##output property apiServiceEntries
 
 {{#with class as |class|}}
+    {{initJSNamespace 'api' class.jsPackageName}}
 	api.{{jsClassNameWithPath}} = new class {{class.name}} {
 
 		constructor() {
-		    this.thunk = app.service('/{{class.packageDirName}}/{{class.name}}/:op');
+		    this.thunk = app.service('{{class.expressServicePath}}');
 	    }
 
 {{#each operations as |fn|}}
 	    {{fn.name}}(
-    {{~#each fn.parameters as |param|}}
-         {{~param.name}}, 
+    {{~#each fn.parameters as |param|~}}
+         {{#unless @first}}, {{/unless}}{{param.name}} 
     {{~/each~}}
 	    ) {
-	    	return this.thunk.create({_op: '{{fn.name}}', 
-    {{~#each fn.parameters as |param|}}
-         {{~param.name}}, 
+	    	return this.thunk.create({_op: '{{fn.name}}'
+    {{~#each fn.parameters as |param|~}}
+         , {{param.name}} 
     {{~/each~}}
     });
 	    }
