Fixes to feathers-react to allow first successful run of generated tests! :)

--- a/plugin-dev/feathers-react/plugins/Entity/index.js.hbs
+++ b/plugin-dev/feathers-react/plugins/Entity/index.js.hbs
@@ -2,14 +2,14 @@
 'use strict';
 
 const service = require('feathers-mongoose');
-const Contact = require('./{{class.name}}-model');
+const {{class.name}}Model = require('./{{class.name}}-model');
 const hooks = require('./hooks');
 
 module.exports = function() {
   const app = this;
 
   const options = {
-    Model: Contact,
+    Model: {{class.name}}Model,
     paginate: {
       default: 5,
       max: 25
