--- a/plugin-dev/feathers-react/plugins/Service/index.test.js.hbs
+++ b/plugin-dev/feathers-react/plugins/Service/index.test.js.hbs
@@ -73,7 +73,7 @@ describe('{{class.name}} service', function() {
 
 
 	it('registered the {{class.name}} service', () => {
-		assert.ok(app.service('/{{class.packageDirName}}/{{class.name}}/:op'));
+		assert.ok(app.service('{{class.expressServicePath}}'));
 	});
 
 
