--- a/plugin-dev/feathers-react/plugins/Entity/crudList.jsx.hbs
+++ b/plugin-dev/feathers-react/plugins/Entity/crudList.jsx.hbs
@@ -1,4 +1,4 @@
-##output {{#if class.doCrud}}preserve{{else}}ignore{{/if}} {{@root.output}}/client/containers/{{class.packageDirName}}/{{class.name}}CrudList.js
+##output {{#if class.doCrud}}preserve{{else}}ignore{{/if}} {{@root.output}}/client/containers/{{class.name}}CrudList.js
 import React from 'react';
 import FeathersComponent from './FeathersComponent';
 import CrudPage from './crud/CrudPage';
@@ -16,8 +16,8 @@ class {{class.name}}CrudList extends FeathersComponent {
             pageTitle={'{{class.name}} list'}
             dao={this.api.{{class.jsClassNameWithPath}}Dao}
             appComponent={this.appComponent}
-            getPrimaryText={(item) => return `${item.{{class.attributes.0.name}} }` },
-            getSecondaryText={(item) => return `${item.{{class.attributes.1.name}} }` }
+            getPrimaryText={(item) => { return `${item.{{class.attributes.0.name}} }`; } }
+            getSecondaryText={(item) => { return `${item.{{class.attributes.1.name}} }`; } }
           />
       );
   }
