--- a/plugin-dev/feathers-react/plugins/Entity/crudListMenuImport.hbs
+++ b/plugin-dev/feathers-react/plugins/Entity/crudListMenuImport.hbs
@@ -1,2 +1,2 @@
 ##output {{#if class.doCrud}}property{{else}}ignore{{/if}} crudListMenuImports
-import {{class.name}}List from './containers/{{class.name}}List';
+import {{class.name}}List from './containers/{{class.name}}CrudList';
