--- a/plugin-dev/feathers-react/plugins/Entity/apiFacadeImport.hbs
+++ b/plugin-dev/feathers-react/plugins/Entity/apiFacadeImport.hbs
@@ -1,2 +1,2 @@
 ##output property apiDaoImport
-import {{class.name}}Schema from 'common/{{class.packageDirName}}/{{class.name}}Schema.js';
+import {{class.name}}Schema from 'common/{{class.packageDirName}}/{{class.name}}Schema';
