--- a/plugin-dev/feathers-react/plugins/Service/ServiceImpl.js.hbs
+++ b/plugin-dev/feathers-react/plugins/Service/ServiceImpl.js.hbs
@@ -1,4 +1,4 @@
-##output preserve {{@root.output}}/src/services/{{class.packageDirName}}/{{class.name}}/{{class.name}}Impl.js
+##output {{safePreserve class.name 'AccountService'}} {{@root.output}}/src/services/{{class.packageDirName}}/{{class.name}}/{{class.name}}Impl.js
 'use strict';
 
 const errors = require('feathers-errors');
@@ -20,7 +20,7 @@ class {{class.name}}Impl {
      {{~#if fn.hasParameters~}}
        { 
     {{~#each fn.parameters as |param|}}
-         {{~param.name}}, 
+         {{~#unless @first}}, {{/unless}}{{param.name}}
     {{~/each~}}
          },
     {{~/if~}}
