--- a/plugin-dev/feathers-react/plugins/POJO/pojo-operations.js.hbs
+++ b/plugin-dev/feathers-react/plugins/POJO/pojo-operations.js.hbs
@@ -1,4 +1,4 @@
-##output {{#if class.hasOperations}}preserve{{else}}ignore{{/if}} {{@root.output}}/{{#if class.isValueObject}}common/{{else}}src/{{/if}}{{class.packageDirName}}/{{class.name}}-operations.js
+##output {{#if class.hasOperations}}preserve{{else}}ignore{{/if}} {{@root.output}}/{{#if class.allowExternalAccess}}common/{{else}}src/{{/if}}{{class.packageDirName}}/{{class.name}}-operations.js
 {{#with class as |class|}}
 
 // This file was generated with NodeMDA, but you may place your customizations here
