--- a/plugin-dev/feathers-react/plugins/POJO/schema.js.hbs
+++ b/plugin-dev/feathers-react/plugins/POJO/schema.js.hbs
@@ -1,2 +1,2 @@
-##output overwrite {{@root.output}}/{{#if class.allowExternalAccess}}common/{{else}}src/{{/if}}{{class.packageDirName}}/{{class.name}}Schema.js
+##output overwrite {{@root.output}}/common/{{class.packageDirName}}/{{class.name}}Schema.js
 {{> output-omni-schema}}
